feat(issue): implemented GetIssue route
