# docs/swagger.json
@@ -14,6 +14,36 @@
     },
     "basePath": "/api/v1",
     "paths": {
+        "/issues/{issueId}": {
+            "get": {
+                "description": "Returns a issue by its identifier.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Issues"
+                ],
+                "summary": "Get issue",
+                "parameters": [
+                    {
+                        "minimum": 1,
+                        "type": "integer",
+                        "description": "Issue ID",
+                        "name": "issueId",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/GetIssueResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/projects": {
             "get": {
                 "description": "Returns a projects list.",
@@ -336,6 +366,14 @@
             "properties": {
                 "data": {
                     "$ref": "#/definitions/Project"
+                }
+            }
+        },
+        "GetIssueResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "$ref": "#/definitions/Issue"
                 }
             }
         },
