# internal/http/v1/issues_dto.go
@@ -16,24 +16,38 @@ type CreateIssueRequest struct {
 	DueDate     *time.Time
 }
 
-type CreateIssueDataProjectResponse struct {
+type ProjectShort struct {
 	ID   domain.ProjectID `json:"id"`
 	Name string           `json:"name"`
 } //	@name	ProjectShort
 
 type CreateIssueDataResponse struct {
-	ID          domain.IssueID                 `json:"id"`
-	Title       string                         `json:"title"`
-	Description string                         `json:"description"`
-	Status      domain.IssueStatus             `json:"status"`
-	Priority    domain.IssuePriority           `json:"priority"`
-	DueDate     *time.Time                     `json:"dueDate"`
-	CreatedAt   time.Time                      `json:"createdAt"`
-	UpdatedAt   time.Time                      `json:"updatedAt"`
-	Project     CreateIssueDataProjectResponse `json:"project"`
+	ID          domain.IssueID       `json:"id"`
+	Title       string               `json:"title"`
+	Description string               `json:"description"`
+	Status      domain.IssueStatus   `json:"status"`
+	Priority    domain.IssuePriority `json:"priority"`
+	DueDate     *time.Time           `json:"dueDate"`
+	CreatedAt   time.Time            `json:"createdAt"`
+	UpdatedAt   time.Time            `json:"updatedAt"`
+	Project     ProjectShort         `json:"project"`
 } //	@name	Issue
 
 type CreateIssueResponse = SuccessResponse[CreateIssueDataResponse] //	@name	CreateIssueResponse
+
+type GetIssueDataResponse struct {
+	ID          domain.IssueID       `json:"id"`
+	Title       string               `json:"title"`
+	Description string               `json:"description"`
+	Status      domain.IssueStatus   `json:"status"`
+	Priority    domain.IssuePriority `json:"priority"`
+	DueDate     *time.Time           `json:"dueDate"`
+	CreatedAt   time.Time            `json:"createdAt"`
+	UpdatedAt   time.Time            `json:"updatedAt"`
+	Project     ProjectShort         `json:"project"`
+} //	@name	Issue
+
+type GetIssueResponse = SuccessResponse[GetIssueDataResponse] //	@name	GetIssueResponse
 
 type GetProjectIssuesListRequest struct {
 	SkipLimit
